force-app/main/default/objects/Rule_Action__c/Rule_Action__c.object-meta.xml
<CustomObject>
    <description>Defines what to do when a product rule evaluates to true.</description>
    <label>Rule Action</label>
    <nameField>
        <displayFormat>RA-{0000}</displayFormat>
        <label>Rule Action Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rule Actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>