force-app/main/default/objects/Rule_Action__c/fields/Filter_Field__c.field-meta.xml
<CustomField>
    <fullName>Filter_Field__c</fullName>
    <inlineHelpText>API name for dynamic filtering (e.g., ProductCode, Family). Used if Target Product is blank.</inlineHelpText>
    <label>Filter Field</label>
    <length>120</length>
    <type>Text</type>
</CustomField>