force-app/main/default/objects/Rule_Action__c/fields/Filter_Operator__c.field-meta.xml
<CustomField>
    <fullName>Filter_Operator__c</fullName>
    <inlineHelpText>Operator for the filter. Required if Filter Field is set.</inlineHelpText>
    <label>Filter Operator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>equals</fullName>
            </value>
            <value>
                <fullName>not equals</fullName>
            </value>
            <value>
                <fullName>contains</fullName>
            </value>
            <value>
                <fullName>starts with</fullName>
            </value>
            <value>
                <fullName>ends with</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>