force-app/main/default/objects/Rule_Action__c/fields/Filter_Value__c.field-meta.xml
<CustomField>
    <fullName>Filter_Value__c</fullName>
    <inlineHelpText>Value to match in Filter Field. Required if Filter Field is set.</inlineHelpText>
    <label>Filter Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>