force-app/main/default/objects/Rule_Action__c/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <inlineHelpText>Execution order if multiple actions exist. Lower = first.</inlineHelpText>
    <label>Sort Order</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>