force-app/main/default/objects/Rule_Action__c/fields/Target_Product__c.field-meta.xml
<CustomField>
    <fullName>Target_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Specific product to target. If blank, use Filter fields instead. If set, filters are ignored.</inlineHelpText>
    <label>Target Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Rule Actions (Target)</relationshipLabel>
    <relationshipName>Rule_Action_Targets</relationshipName>
    <type>Lookup</type>
</CustomField>