force-app/main/default/objects/Rule_Action__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <inlineHelpText>What action does this rule perform on the target product(s)?</inlineHelpText>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Add</fullName>
            </value>
            <value>
                <fullName>Remove</fullName>
            </value>
            <value>
                <fullName>Hide</fullName>
            </value>
            <value>
                <fullName>Show</fullName>
            </value>
            <value>
                <fullName>Enable</fullName>
            </value>
            <value>
                <fullName>Disable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>