force-app/main/default/objects/Rule_Action__c/validationRules/Rule_Action_Sort_Order_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Rule_Action_Sort_Order_Positive</fullName>
    <active>true</active>
    <description>Sort Order, if set, must be a positive number.</description>
    <errorConditionFormula>AND(NOT(ISBLANK(Sort_Order__c)), Sort_Order__c &lt;= 0)</errorConditionFormula>
    <errorDisplayField>Sort_Order__c</errorDisplayField>
    <errorMessage>Sort Order must be a positive number (or leave blank).</errorMessage>
</ValidationRule>